--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../ſןwʞ ꞁȷ̀ɜ j͐ʃɹ ŋᷠꞇ }ʃꞇ/ſɭɹ ſןɹ }ʃꞇ/}ʃᴜ j͐ʃᴜ ſɭɹ ſןɹ.apk"
+export_path="../../../ſןwʞ ꞁȷ̀ɜ j͐ʃɹ ŋᷠꞇ }ʃꞇ/ſɭɹ ſןɹ }ʃꞇ/}ʃᴜ j͐ʃᴜ ſɭɹ ſןɹ/}ʃᴜ j͐ʃᴜ ſɭɹ ſןɹ.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -284,7 +284,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../ſןwʞ ꞁȷ̀ɜ j͐ʃɹ ŋᷠꞇ }ʃꞇ/ſɭɹ ſןɹ }ʃꞇ/}ʃᴜ j͐ʃᴜ ſɭɹ ſןɹ.exe"
+export_path="../../../ſןwʞ ꞁȷ̀ɜ j͐ʃɹ ŋᷠꞇ }ʃꞇ/ſɭɹ ſןɹ }ʃꞇ/}ʃᴜ j͐ʃᴜ ſɭɹ ſןɹ/}ʃᴜ j͐ʃᴜ ſɭɹ ſןɹ.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
