--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -27,7 +27,7 @@ architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
 version/code=1
-version/name=""
+version/name="ıɩ.ƨ"
 package/unique_name="aih.iikrhia.nalakiipii"
 package/name="}ʃᴜ j͐ʃᴜ ſɭɹ ſןɹ"
 package/signed=true
@@ -134,6 +134,7 @@ permissions/mount_format_filesystems=false
 permissions/mount_unmount_filesystems=false
 permissions/nfc=false
 permissions/persistent_activity=false
+permissions/post_notifications=false
 permissions/process_outgoing_calls=false
 permissions/read_calendar=false
 permissions/read_call_log=false
